@@ -1,3 +1,3 @@
-__version__ = '0.0.1'
+__version__ = '0.0.2'
 __author__ = 'Thomas Antony'
 __license__ = 'MIT'
